--- a/backend/src/main/resources/html/index.html
+++ b/backend/src/main/resources/html/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <title>noron</title>
 
+    <link href="/noron/static/css/start_1_loc.css" type="text/css" rel="stylesheet"/>
+    <link href="/noron/static/css/start_2_font.css" type="text/css" rel="stylesheet"/>
+    <link href="/noron/static/css/start_3_styles.css" type="text/css" rel="stylesheet"/>
     <link rel="stylesheet" href="/noron/static/css/input.css">
-    <link rel="stylesheet" href="/noron/static/css/finish.css">
+    <!--<link rel="stylesheet" href="/noron/static/css/finish.css">-->
     <script type="text/javascript" src="http://www.w3school.com.cn/jquery/jquery-1.11.1.min.js"></script>
 
 
