--- a/backend/src/main/resources/html/index.html
+++ b/backend/src/main/resources/html/index.html
@@ -8,6 +8,7 @@
     <link href="/noron/static/css/start_2_font.css" type="text/css" rel="stylesheet"/>
     <link href="/noron/static/css/start_3_styles.css" type="text/css" rel="stylesheet"/>
     <link rel="stylesheet" href="/noron/static/css/input.css">
+    <link rel="stylesheet" href="/noron/static/css/rank.css">
     <link rel="stylesheet" href="/noron/static/css/finish.css">
     <script type="text/javascript" src="http://www.w3school.com.cn/jquery/jquery-1.11.1.min.js"></script>
 
