--- a/backend/src/main/resources/html/index.html
+++ b/backend/src/main/resources/html/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/noron/static/css/input.css">
     <link rel="stylesheet" href="/noron/static/css/rank.css">
     <link rel="stylesheet" href="/noron/static/css/finish.css">
-    <script type="text/javascript" src="http://www.w3school.com.cn/jquery/jquery-1.11.1.min.js"></script>
+    <!--<script type="text/javascript" src="http://www.w3school.com.cn/jquery/jquery-1.11.1.min.js"></script>-->
 
 
 </head>
