--- a/backend/src/main/resources/html/index.html
+++ b/backend/src/main/resources/html/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/noron/static/css/finish.css">
     <link rel="stylesheet" href="/noron/static/css/timeLine.css">
     <link rel="stylesheet" href="/noron/static/css/taskList.css">
+    <link rel="stylesheet" href="/noron/static/css/header.css">
     <script type="text/javascript" src="http://www.w3school.com.cn/jquery/jquery-1.11.1.min.js"></script>
     <!--<script type="text/javascript" src="http://www.w3school.com.cn/jquery/jquery-1.11.1.min.js"></script>-->
 
